--- a/hugo.yaml
+++ b/hugo.yaml
@@ -90,7 +90,7 @@ params:
 
   analytics:
     google:
-      SiteVerificationTag: "XYZabc"
+      SiteVerificationTag: "G-G121KK3SSR"
     bing:
       SiteVerificationTag: "XYZabc"
     yandex:
