--- a/hugo.yaml
+++ b/hugo.yaml
@@ -153,6 +153,9 @@ markup:
     # guessSyntax: true
     # lineNos: true
     # style: monokai
+  goldmark:
+    renderer:
+      unsafe: true
 
 sitemap:
   changeFreq: ""
